force-app/main/default/objects/Metadata_Item__c/Metadata_Item__c.object-meta.xml
<CustomObject>
    <label>Metadata Item</label>
    <nameField>
        <displayFormat>MI-{0000}</displayFormat>
        <label>Metadata Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>