force-app/main/default/objects/Metadata_Item__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <formula>IF(ISBLANK( Veeva_Component_Type__c ), IF(ISBLANK(Type_Of_Component__c), RecordType.Name, Type_Of_Component__c), Veeva_Component_Type__c)</formula>
    <label>Component Type</label>
    <type>Text</type>
</CustomField>