force-app/main/default/objects/Metadata_Item__c/fields/CRC32__c.field-meta.xml
<CustomField>
    <fullName>CRC32__c</fullName>
    <label>CRC32</label>
    <length>255</length>
    <type>Text</type>
</CustomField>