force-app/main/default/objects/Metadata_Item__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Readable Name of Component</description>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>