force-app/main/default/objects/Metadata_Item__c/fields/Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By__c</fullName>
    <label>Last Modified By(Source Org)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>