force-app/main/default/objects/Metadata_Item__c/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <label>Changed On</label>
    <type>DateTime</type>
</CustomField>