force-app/main/default/objects/Metadata_Item__c/fields/Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Snapshot__c</fullName>
    <label>Snapshot</label>
    <referenceTo>Snapshot__c</referenceTo>
    <relationshipLabel>Components Retrieved</relationshipLabel>
    <relationshipName>Metadata_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>