force-app/main/default/objects/Metadata_Item__c/fields/Veeva_Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Veeva_Component_Type__c</fullName>
    <label>Veeva Component Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>