force-app/main/default/objects/Metadata_Item__c/recordTypes/AccountForecastSettings.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AccountForecastSettings</fullName>
    <label>AccountForecastSettings</label>
</RecordType>