force-app/main/default/objects/Metadata_Item__c/recordTypes/AccountingFieldMapping.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AccountingFieldMapping</fullName>
    <label>AccountingFieldMapping</label>
</RecordType>