force-app/main/default/objects/Metadata_Item__c/recordTypes/AccountingModelConfig.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AccountingModelConfig</fullName>
    <label>AccountingModelConfig</label>
</RecordType>