force-app/main/default/objects/Metadata_Item__c/recordTypes/AccountPlanObjMeasCalcDef.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AccountPlanObjMeasCalcDef</fullName>
    <label>AccountPlanObjMeasCalcDef</label>
</RecordType>