force-app/main/default/objects/Metadata_Item__c/recordTypes/AccountRelationshipShareRule.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AccountRelationshipShareRule</fullName>
    <label>AccountRelationshipShareRule</label>
</RecordType>