force-app/main/default/objects/Metadata_Item__c/recordTypes/AcctMgrTargetSettings.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AcctMgrTargetSettings</fullName>
    <label>AcctMgrTargetSettings</label>
</RecordType>