force-app/main/default/objects/Metadata_Item__c/recordTypes/ActionableEventOrchDef.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ActionableEventOrchDef</fullName>
    <label>ActionableEventOrchDef</label>
</RecordType>