force-app/main/default/objects/Metadata_Item__c/recordTypes/ActionableEventTypeDef.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ActionableEventTypeDef</fullName>
    <label>ActionableEventTypeDef</label>
</RecordType>