force-app/main/default/objects/Metadata_Item__c/recordTypes/ActionableListDefinition.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ActionableListDefinition</fullName>
    <label>ActionableListDefinition</label>
</RecordType>