force-app/main/default/objects/Metadata_Item__c/recordTypes/ActionLinkGroupTemplate.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ActionLinkGroupTemplate</fullName>
    <label>ActionLinkGroupTemplate</label>
</RecordType>