force-app/main/default/objects/Metadata_Item__c/recordTypes/ActionPlanTemplate.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ActionPlanTemplate</fullName>
    <label>ActionPlanTemplate</label>
</RecordType>