force-app/main/default/objects/Metadata_Item__c/recordTypes/ActivationPlatform.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ActivationPlatform</fullName>
    <label>ActivationPlatform</label>
</RecordType>