force-app/main/default/objects/Metadata_Item__c/recordTypes/ActivationPlatformActvAttr.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ActivationPlatformActvAttr</fullName>
    <label>ActivationPlatformActvAttr</label>
</RecordType>