force-app/main/default/objects/Metadata_Item__c/recordTypes/ActivationPlatformField.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ActivationPlatformField</fullName>
    <label>ActivationPlatformField</label>
</RecordType>