force-app/main/default/objects/Metadata_Item__c/recordTypes/ActvPfrmDataConnectorS3.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ActvPfrmDataConnectorS3</fullName>
    <label>ActvPfrmDataConnectorS3</label>
</RecordType>