force-app/main/default/objects/Metadata_Item__c/recordTypes/ActvPlatformAdncIdentifier.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ActvPlatformAdncIdentifier</fullName>
    <label>ActvPlatformAdncIdentifier</label>
</RecordType>