force-app/main/default/objects/Metadata_Item__c/recordTypes/ActvPlatformFieldValue.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ActvPlatformFieldValue</fullName>
    <label>ActvPlatformFieldValue</label>
</RecordType>