force-app/main/default/objects/Metadata_Item__c/recordTypes/ActvPlatformOAuthConnector.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ActvPlatformOAuthConnector</fullName>
    <label>ActvPlatformOAuthConnector</label>
</RecordType>