force-app/main/default/objects/Metadata_Item__c/recordTypes/AdvAccountForecastSet.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AdvAccountForecastSet</fullName>
    <label>AdvAccountForecastSet</label>
</RecordType>