force-app/main/default/objects/Metadata_Item__c/recordTypes/AffinityScoreDefinition.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AffinityScoreDefinition</fullName>
    <label>AffinityScoreDefinition</label>
</RecordType>