force-app/main/default/objects/Metadata_Item__c/recordTypes/AIApplication.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AIApplication</fullName>
    <label>AIApplication</label>
</RecordType>