force-app/main/default/objects/Metadata_Item__c/recordTypes/AIApplicationConfig.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AIApplicationConfig</fullName>
    <label>AIApplicationConfig</label>
</RecordType>