force-app/main/default/objects/Metadata_Item__c/recordTypes/AiAuthoringBundle.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AiAuthoringBundle</fullName>
    <label>AiAuthoringBundle</label>
</RecordType>