force-app/main/default/objects/Metadata_Item__c/recordTypes/AiEvaluationDefinition.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AiEvaluationDefinition</fullName>
    <label>AiEvaluationDefinition</label>
</RecordType>