force-app/main/default/objects/Metadata_Item__c/recordTypes/AIScoringModelDefinition.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AIScoringModelDefinition</fullName>
    <label>AIScoringModelDefinition</label>
</RecordType>