force-app/main/default/objects/Metadata_Item__c/recordTypes/AIUsecaseDefinition.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AIUsecaseDefinition</fullName>
    <label>AIUsecaseDefinition</label>
</RecordType>