force-app/main/default/objects/Metadata_Item__c/recordTypes/AnalyticsDashboard.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AnalyticsDashboard</fullName>
    <label>AnalyticsDashboard</label>
</RecordType>