force-app/main/default/objects/Metadata_Item__c/recordTypes/AnalyticSnapshot.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AnalyticSnapshot</fullName>
    <label>AnalyticSnapshot</label>
</RecordType>