force-app/main/default/objects/Metadata_Item__c/recordTypes/AnalyticsVisualization.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AnalyticsVisualization</fullName>
    <label>AnalyticsVisualization</label>
</RecordType>