force-app/main/default/objects/Metadata_Item__c/recordTypes/AnalyticsWorkspace.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AnalyticsWorkspace</fullName>
    <label>AnalyticsWorkspace</label>
</RecordType>