force-app/main/default/objects/Metadata_Item__c/recordTypes/AnimationRule.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AnimationRule</fullName>
    <label>AnimationRule</label>
</RecordType>