force-app/main/default/objects/Metadata_Item__c/recordTypes/ApexComponent.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ApexComponent</fullName>
    <label>ApexComponent</label>
</RecordType>