force-app/main/default/objects/Metadata_Item__c/recordTypes/ApexEmailNotifications.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ApexEmailNotifications</fullName>
    <label>ApexEmailNotifications</label>
</RecordType>