force-app/main/default/objects/Metadata_Item__c/recordTypes/ApexPage.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ApexPage</fullName>
    <label>ApexPage</label>
</RecordType>