force-app/main/default/objects/Metadata_Item__c/recordTypes/ApexTestSuite.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ApexTestSuite</fullName>
    <label>ApexTestSuite</label>
</RecordType>