force-app/main/default/objects/Metadata_Item__c/recordTypes/ApexTrigger.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ApexTrigger</fullName>
    <label>ApexTrigger</label>
</RecordType>