force-app/main/default/objects/Metadata_Item__c/recordTypes/AppFrameworkTemplateBundle.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AppFrameworkTemplateBundle</fullName>
    <label>AppFrameworkTemplateBundle</label>
</RecordType>