force-app/main/default/objects/Metadata_Item__c/recordTypes/ApplicationRecordTypeConfig.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ApplicationRecordTypeConfig</fullName>
    <label>ApplicationRecordTypeConfig</label>
</RecordType>