force-app/main/default/objects/Metadata_Item__c/recordTypes/ApplicationSubtypeDefinition.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ApplicationSubtypeDefinition</fullName>
    <label>ApplicationSubtypeDefinition</label>
</RecordType>