force-app/main/default/objects/Metadata_Item__c/recordTypes/AppMenu.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AppMenu</fullName>
    <label>AppMenu</label>
</RecordType>