force-app/main/default/objects/Metadata_Item__c/recordTypes/AppointmentAssignmentPolicy.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AppointmentAssignmentPolicy</fullName>
    <label>AppointmentAssignmentPolicy</label>
</RecordType>