force-app/main/default/objects/Metadata_Item__c/recordTypes/AppointmentSchedulingPolicy.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AppointmentSchedulingPolicy</fullName>
    <label>AppointmentSchedulingPolicy</label>
</RecordType>