force-app/main/default/objects/Metadata_Item__c/recordTypes/ApprovalProcess.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ApprovalProcess</fullName>
    <label>ApprovalProcess</label>
</RecordType>