force-app/main/default/objects/Metadata_Item__c/recordTypes/AssessmentQuestion.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AssessmentQuestion</fullName>
    <label>AssessmentQuestion</label>
</RecordType>