force-app/main/default/objects/Metadata_Item__c/recordTypes/AssessmentQuestionSet.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AssessmentQuestionSet</fullName>
    <label>AssessmentQuestionSet</label>
</RecordType>