force-app/main/default/objects/Metadata_Item__c/recordTypes/AssignmentRule.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AssignmentRule</fullName>
    <label>AssignmentRule</label>
</RecordType>