force-app/main/default/objects/Metadata_Item__c/recordTypes/AssignmentRules.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AssignmentRules</fullName>
    <label>AssignmentRules</label>
</RecordType>