force-app/main/default/objects/Metadata_Item__c/recordTypes/Audience.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>Audience</fullName>
    <label>Audience</label>
</RecordType>