force-app/main/default/objects/Metadata_Item__c/recordTypes/AuraDefinitionBundle.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AuraDefinitionBundle</fullName>
    <label>AuraDefinitionBundle</label>
</RecordType>