force-app/main/default/objects/Metadata_Item__c/recordTypes/AuthProvider.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AuthProvider</fullName>
    <label>AuthProvider</label>
</RecordType>