force-app/main/default/objects/Metadata_Item__c/recordTypes/AutoResponseRule.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AutoResponseRule</fullName>
    <label>AutoResponseRule</label>
</RecordType>