force-app/main/default/objects/Metadata_Item__c/recordTypes/AutoResponseRules.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AutoResponseRules</fullName>
    <label>AutoResponseRules</label>
</RecordType>