force-app/main/default/objects/Metadata_Item__c/recordTypes/BaseSharingRule.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>BaseSharingRule</fullName>
    <label>BaseSharingRule</label>
</RecordType>