force-app/main/default/objects/Metadata_Item__c/recordTypes/BatchCalcJobDefinition.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>BatchCalcJobDefinition</fullName>
    <label>BatchCalcJobDefinition</label>
</RecordType>