force-app/main/default/objects/Metadata_Item__c/recordTypes/BatchProcessJobDefinition.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>BatchProcessJobDefinition</fullName>
    <label>BatchProcessJobDefinition</label>
</RecordType>