force-app/main/default/objects/Metadata_Item__c/recordTypes/BlacklistedConsumer.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>BlacklistedConsumer</fullName>
    <label>BlacklistedConsumer</label>
</RecordType>