force-app/main/default/objects/Metadata_Item__c/recordTypes/Bot.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>Bot</fullName>
    <label>Bot</label>
</RecordType>