force-app/main/default/objects/Metadata_Item__c/recordTypes/BotBlock.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>BotBlock</fullName>
    <label>BotBlock</label>
</RecordType>