force-app/main/default/objects/Metadata_Item__c/recordTypes/BotTemplate.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>BotTemplate</fullName>
    <label>BotTemplate</label>
</RecordType>