force-app/main/default/objects/Metadata_Item__c/recordTypes/BotVersion.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>BotVersion</fullName>
    <label>BotVersion</label>
</RecordType>