force-app/main/default/objects/Metadata_Item__c/recordTypes/BrandingSet.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>BrandingSet</fullName>
    <label>BrandingSet</label>
</RecordType>