force-app/main/default/objects/Metadata_Item__c/recordTypes/BriefcaseDefinition.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>BriefcaseDefinition</fullName>
    <label>BriefcaseDefinition</label>
</RecordType>