force-app/main/default/objects/Metadata_Item__c/recordTypes/BusinessProcess.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>BusinessProcess</fullName>
    <label>BusinessProcess</label>
</RecordType>