force-app/main/default/objects/Metadata_Item__c/recordTypes/BusinessProcessGroup.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>BusinessProcessGroup</fullName>
    <label>BusinessProcessGroup</label>
</RecordType>