force-app/main/default/objects/Metadata_Item__c/recordTypes/BusinessProcessTypeDefinition.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>BusinessProcessTypeDefinition</fullName>
    <label>BusinessProcessTypeDefinition</label>
</RecordType>