force-app/main/default/objects/Metadata_Item__c/recordTypes/CallCenter.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CallCenter</fullName>
    <label>CallCenter</label>
</RecordType>