force-app/main/default/objects/Metadata_Item__c/recordTypes/CallCenterRoutingMap.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CallCenterRoutingMap</fullName>
    <label>CallCenterRoutingMap</label>
</RecordType>