force-app/main/default/objects/Metadata_Item__c/recordTypes/CallCoachingMediaProvider.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CallCoachingMediaProvider</fullName>
    <label>CallCoachingMediaProvider</label>
</RecordType>