force-app/main/default/objects/Metadata_Item__c/recordTypes/CampaignInfluenceModel.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CampaignInfluenceModel</fullName>
    <label>CampaignInfluenceModel</label>
</RecordType>