force-app/main/default/objects/Metadata_Item__c/recordTypes/CareBenefitVerifySettings.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CareBenefitVerifySettings</fullName>
    <label>CareBenefitVerifySettings</label>
</RecordType>