force-app/main/default/objects/Metadata_Item__c/recordTypes/CareLimitType.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CareLimitType</fullName>
    <label>CareLimitType</label>
</RecordType>