force-app/main/default/objects/Metadata_Item__c/recordTypes/CareProviderSearchConfig.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CareProviderSearchConfig</fullName>
    <label>CareProviderSearchConfig</label>
</RecordType>