force-app/main/default/objects/Metadata_Item__c/recordTypes/CareRequestConfiguration.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CareRequestConfiguration</fullName>
    <label>CareRequestConfiguration</label>
</RecordType>