force-app/main/default/objects/Metadata_Item__c/recordTypes/CareSystemFieldMapping.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CareSystemFieldMapping</fullName>
    <label>CareSystemFieldMapping</label>
</RecordType>