force-app/main/default/objects/Metadata_Item__c/recordTypes/CaseSubjectParticle.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CaseSubjectParticle</fullName>
    <label>CaseSubjectParticle</label>
</RecordType>