force-app/main/default/objects/Metadata_Item__c/recordTypes/Certificate.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>Certificate</fullName>
    <label>Certificate</label>
</RecordType>