force-app/main/default/objects/Metadata_Item__c/recordTypes/ChannelLayout.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ChannelLayout</fullName>
    <label>ChannelLayout</label>
</RecordType>