force-app/main/default/objects/Metadata_Item__c/recordTypes/ChatterExtension.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ChatterExtension</fullName>
    <label>ChatterExtension</label>
</RecordType>