force-app/main/default/objects/Metadata_Item__c/recordTypes/ChoiceList.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ChoiceList</fullName>
    <label>ChoiceList</label>
</RecordType>