force-app/main/default/objects/Metadata_Item__c/recordTypes/ClaimFinancialSettings.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ClaimFinancialSettings</fullName>
    <label>ClaimFinancialSettings</label>
</RecordType>