force-app/main/default/objects/Metadata_Item__c/recordTypes/ClauseCatgConfiguration.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ClauseCatgConfiguration</fullName>
    <label>ClauseCatgConfiguration</label>
</RecordType>