force-app/main/default/objects/Metadata_Item__c/recordTypes/CleanDataService.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CleanDataService</fullName>
    <label>CleanDataService</label>
</RecordType>