force-app/main/default/objects/Metadata_Item__c/recordTypes/CMSConnectSource.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CMSConnectSource</fullName>
    <label>CMSConnectSource</label>
</RecordType>