force-app/main/default/objects/Metadata_Item__c/recordTypes/CommunityTemplateDefinition.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CommunityTemplateDefinition</fullName>
    <label>CommunityTemplateDefinition</label>
</RecordType>