force-app/main/default/objects/Metadata_Item__c/recordTypes/CommunityThemeDefinition.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CommunityThemeDefinition</fullName>
    <label>CommunityThemeDefinition</label>
</RecordType>