force-app/main/default/objects/Metadata_Item__c/recordTypes/CompactLayout.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CompactLayout</fullName>
    <label>CompactLayout</label>
</RecordType>