force-app/main/default/objects/Metadata_Item__c/recordTypes/ConnectedApp.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ConnectedApp</fullName>
    <label>ConnectedApp</label>
</RecordType>