force-app/main/default/objects/Metadata_Item__c/recordTypes/ContentAsset.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ContentAsset</fullName>
    <label>ContentAsset</label>
</RecordType>