force-app/main/default/objects/Metadata_Item__c/recordTypes/ContentTypeBundle.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ContentTypeBundle</fullName>
    <label>ContentTypeBundle</label>
</RecordType>