force-app/main/default/objects/Metadata_Item__c/recordTypes/ContextDefinition.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ContextDefinition</fullName>
    <label>ContextDefinition</label>
</RecordType>