force-app/main/default/objects/Metadata_Item__c/recordTypes/ContextUseCaseMapping.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ContextUseCaseMapping</fullName>
    <label>ContextUseCaseMapping</label>
</RecordType>