force-app/main/default/objects/Metadata_Item__c/recordTypes/ContractType.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ContractType</fullName>
    <label>ContractType</label>
</RecordType>