force-app/main/default/objects/Metadata_Item__c/recordTypes/ConversationChannelDefinition.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ConversationChannelDefinition</fullName>
    <label>ConversationChannelDefinition</label>
</RecordType>