force-app/main/default/objects/Metadata_Item__c/recordTypes/ConversationMessageDefinition.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ConversationMessageDefinition</fullName>
    <label>ConversationMessageDefinition</label>
</RecordType>