force-app/main/default/objects/Metadata_Item__c/recordTypes/ConversationVendorInfo.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ConversationVendorInfo</fullName>
    <label>ConversationVendorInfo</label>
</RecordType>