force-app/main/default/objects/Metadata_Item__c/recordTypes/ConvIntelligenceSignalRule.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ConvIntelligenceSignalRule</fullName>
    <label>ConvIntelligenceSignalRule</label>
</RecordType>