force-app/main/default/objects/Metadata_Item__c/recordTypes/CorsWhitelistOrigin.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CorsWhitelistOrigin</fullName>
    <label>CorsWhitelistOrigin</label>
</RecordType>