force-app/main/default/objects/Metadata_Item__c/recordTypes/CriteriaBasedSharingRule.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CriteriaBasedSharingRule</fullName>
    <label>CriteriaBasedSharingRule</label>
</RecordType>