force-app/main/default/objects/Metadata_Item__c/recordTypes/CspTrustedSite.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CspTrustedSite</fullName>
    <label>CspTrustedSite</label>
</RecordType>