force-app/main/default/objects/Metadata_Item__c/recordTypes/CustomApplication.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CustomApplication</fullName>
    <label>CustomApplication</label>
</RecordType>