force-app/main/default/objects/Metadata_Item__c/recordTypes/CustomApplicationComponent.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CustomApplicationComponent</fullName>
    <label>CustomApplicationComponent</label>
</RecordType>