force-app/main/default/objects/Metadata_Item__c/recordTypes/CustomFeedFilter.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CustomFeedFilter</fullName>
    <label>CustomFeedFilter</label>
</RecordType>