force-app/main/default/objects/Metadata_Item__c/recordTypes/CustomField.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CustomField</fullName>
    <label>CustomField</label>
</RecordType>