force-app/main/default/objects/Metadata_Item__c/recordTypes/CustomFieldDisplay.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CustomFieldDisplay</fullName>
    <label>CustomFieldDisplay</label>
</RecordType>