force-app/main/default/objects/Metadata_Item__c/recordTypes/CustomHelpMenuSection.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CustomHelpMenuSection</fullName>
    <label>CustomHelpMenuSection</label>
</RecordType>