force-app/main/default/objects/Metadata_Item__c/recordTypes/CustomIndex.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CustomIndex</fullName>
    <label>CustomIndex</label>
</RecordType>