force-app/main/default/objects/Metadata_Item__c/recordTypes/CustomLabel.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CustomLabel</fullName>
    <label>CustomLabel</label>
</RecordType>