force-app/main/default/objects/Metadata_Item__c/recordTypes/CustomLabels.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CustomLabels</fullName>
    <label>CustomLabels</label>
</RecordType>