force-app/main/default/objects/Metadata_Item__c/recordTypes/CustomMetadata.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CustomMetadata</fullName>
    <label>CustomMetadata</label>
</RecordType>