force-app/main/default/objects/Metadata_Item__c/recordTypes/CustomNotificationType.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CustomNotificationType</fullName>
    <label>CustomNotificationType</label>
</RecordType>