force-app/main/default/objects/Metadata_Item__c/recordTypes/CustomObject.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CustomObject</fullName>
    <label>CustomObject</label>
</RecordType>