force-app/main/default/objects/Metadata_Item__c/recordTypes/CustomObjectTranslation.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CustomObjectTranslation</fullName>
    <label>CustomObjectTranslation</label>
</RecordType>