force-app/main/default/objects/Metadata_Item__c/recordTypes/CustomPageWebLink.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CustomPageWebLink</fullName>
    <label>CustomPageWebLink</label>
</RecordType>