force-app/main/default/objects/Metadata_Item__c/recordTypes/CustomPermission.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CustomPermission</fullName>
    <label>CustomPermission</label>
</RecordType>