force-app/main/default/objects/Metadata_Item__c/recordTypes/CustomSite.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CustomSite</fullName>
    <label>CustomSite</label>
</RecordType>