force-app/main/default/objects/Metadata_Item__c/recordTypes/CustomTab.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CustomTab</fullName>
    <label>CustomTab</label>
</RecordType>