force-app/main/default/objects/Metadata_Item__c/recordTypes/DashboardFolder.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DashboardFolder</fullName>
    <label>DashboardFolder</label>
</RecordType>