force-app/main/default/objects/Metadata_Item__c/recordTypes/DataCalcInsightTemplate.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DataCalcInsightTemplate</fullName>
    <label>DataCalcInsightTemplate</label>
</RecordType>