force-app/main/default/objects/Metadata_Item__c/recordTypes/DataCategoryGroup.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DataCategoryGroup</fullName>
    <label>DataCategoryGroup</label>
</RecordType>