force-app/main/default/objects/Metadata_Item__c/recordTypes/DataConnector.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DataConnector</fullName>
    <label>DataConnector</label>
</RecordType>