force-app/main/default/objects/Metadata_Item__c/recordTypes/DataConnectorIngestApi.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DataConnectorIngestApi</fullName>
    <label>DataConnectorIngestApi</label>
</RecordType>