force-app/main/default/objects/Metadata_Item__c/recordTypes/DataConnectorS3.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DataConnectorS3</fullName>
    <label>DataConnectorS3</label>
</RecordType>