force-app/main/default/objects/Metadata_Item__c/recordTypes/DataKitObjectDependency.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DataKitObjectDependency</fullName>
    <label>DataKitObjectDependency</label>
</RecordType>