force-app/main/default/objects/Metadata_Item__c/recordTypes/DataKitObjectTemplate.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DataKitObjectTemplate</fullName>
    <label>DataKitObjectTemplate</label>
</RecordType>