force-app/main/default/objects/Metadata_Item__c/recordTypes/DataObjectBuildOrgTemplate.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DataObjectBuildOrgTemplate</fullName>
    <label>DataObjectBuildOrgTemplate</label>
</RecordType>