force-app/main/default/objects/Metadata_Item__c/recordTypes/DataObjectSearchIndexConf.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DataObjectSearchIndexConf</fullName>
    <label>DataObjectSearchIndexConf</label>
</RecordType>