force-app/main/default/objects/Metadata_Item__c/recordTypes/DataPackageKitDefinition.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DataPackageKitDefinition</fullName>
    <label>DataPackageKitDefinition</label>
</RecordType>