force-app/main/default/objects/Metadata_Item__c/recordTypes/DataPackageKitObject.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DataPackageKitObject</fullName>
    <label>DataPackageKitObject</label>
</RecordType>