force-app/main/default/objects/Metadata_Item__c/recordTypes/DataSource.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DataSource</fullName>
    <label>DataSource</label>
</RecordType>