force-app/main/default/objects/Metadata_Item__c/recordTypes/DataSourceBundleDefinition.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DataSourceBundleDefinition</fullName>
    <label>DataSourceBundleDefinition</label>
</RecordType>