force-app/main/default/objects/Metadata_Item__c/recordTypes/DataSourceField.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DataSourceField</fullName>
    <label>DataSourceField</label>
</RecordType>