force-app/main/default/objects/Metadata_Item__c/recordTypes/DataSourceObject.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DataSourceObject</fullName>
    <label>DataSourceObject</label>
</RecordType>