force-app/main/default/objects/Metadata_Item__c/recordTypes/DataSourceTenant.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DataSourceTenant</fullName>
    <label>DataSourceTenant</label>
</RecordType>