force-app/main/default/objects/Metadata_Item__c/recordTypes/DataSrcDataModelFieldMap.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DataSrcDataModelFieldMap</fullName>
    <label>DataSrcDataModelFieldMap</label>
</RecordType>